@@ -5,6 +5,10 @@ version 2.74
 	    Fix inotify code to handle dangling symlinks better and
 	    not SEGV in some circumstances.
 
+	    DNSSEC fix. In the case of a signed CNAME generated by a
+	    wildcard which pointed to an unsigned domain, the wrong
+            status would be logged, and some necessary checks omitted.
+	
 
 version 2.73
             Fix crash at startup when an empty suffix is supplied to
